# casts

./: 01-protobuf.org
01/: CMakeLists.txt  ex01.cxx  ex02.cxx  ex02.proto  ex03.cxx  ex03.proto  read_message_reflect.cxx
02/: CMakeLists.txt
02/example01/: CMakeLists.txt  main.cxx  plugin1.cxx
02/example02/: CMakeLists.txt  main.cxx  plugin1.cxx
02/example03/: CMakeLists.txt  main.cxx
02/include/microplugins/: iplugin.hpp  shared_library.hpp
03/: CMakeLists.txt  barfoo.py  foobar.py  foobar.ui  main.cxx  model.cxx  qt-classic-widget.cxx  qt-classic-widget.h  qt-core.cxx  qt-core.h  qt-mainwindow.cxx  qt-mainwindow.h  test-python.py
03/cmake/: packages.cmake
